[build] idea plugin packaging - works